--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="complete_checkbox">Complete</string>
     <string name="start_timer">Start Timer</string>
     <string name="stop_timer">Stop Timer</string>
+    <string name="delete_task">Delete</string>
 </resources>
